--- a/gold-admin-frontend/src/app/views/pages/admin/global-map/global-map.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/global-map/global-map.component.html
@@ -43,8 +43,11 @@
                                 </mat-expansion-panel-header>
 
                                 <ng-template matExpansionPanelContent>
-                                    <div *ngFor="let loan of info.packetTrackingMasterloan;index as i" [ngClass]="i == 0?'p-0':'pt-2'">
-                                        {{loan?.masterLoan?.customerLoan[0]?.loanUniqueId}}
+                                    <div *ngFor="let loan of info.packetTrackingMasterloan;index as i" [ngClass]="i == 0?'p-0':'pt-2'" >
+                                        <span class="w-25">
+
+                                            {{loan?.masterLoan?.customerLoan[0]?.loanUniqueId}}
+                                        </span>
                                         <span class="kt-padding-l-25">
                                             <img src="../../../../../assets/media/icons/compass.svg" height="20" alt="" (click)="navigate(loan)"></span>
                                         <!-- <span *ngIf="info.masterLoan.customerLoan[1].loanUniqueId">
