--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user/add-internal-user/add-internal-user.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user/add-internal-user/add-internal-user.component.html
@@ -149,7 +149,8 @@
     </div>
     <kt-portlet-footer *ngIf="data.action != 'view'">
         <div class="p-3">
-            <kt-modal-footer (action)="action($event)" [value]="data.action"></kt-modal-footer>
+            <kt-modal-footer (action)="action($event)" [value]="'add'" *ngIf="data.action == 'add'"></kt-modal-footer>
+            <kt-modal-footer (action)="action($event)" [value]="'update'" *ngIf="data.action == 'edit'"></kt-modal-footer>
         </div>
     </kt-portlet-footer>
 </div>
