--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/packet-tracking/packet-tracking.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/packet-tracking/packet-tracking.component.scss
@@ -1,13 +1,13 @@
 :host{
     .mat-column-customerId{
         padding-left: 10px !important;
-        flex: 0 0 10% !important;
+        flex: 0 0 8% !important;
     }
     .mat-column-scrapId{
         flex: 0 0 8% !important;
     }
     .mat-column-actions{
-        flex: 0 0 18% !important;
+        flex: 0 0 16% !important;
     } 
     .mat-column-internalBranch{
         flex: 0 0 7% !important;
@@ -16,7 +16,7 @@
         flex: 0 0 10% !important;
     } 
     .mat-column-userName{
-        flex: 0 0 12% !important;
+        flex: 0 0 10% !important;
     }
     .mat-column-scrapAmount{
         flex: 0 0 7% !important;
@@ -28,13 +28,16 @@
         flex: 0 0 10% !important;
     }
     .mat-column-mobileNumber{
-        flex: 0 0 10% !important;
+        flex: 0 0 8% !important;
     }
     .mat-column-elapseTime{
         flex: 0 0 8% !important;
     }
+    .mat-column-status{
+        flex: 0 0 8% !important;
+    }
     mat-row,mat-header-row{
-        width: 140% !important;
+        width: 160% !important;
     }
     .multiple {
         display: flex;
