--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
@@ -31,6 +31,11 @@
                     <mat-header-cell *matHeaderCellDef>Customer ID</mat-header-cell>
                     <mat-cell *matCellDef="let item">{{item.masterLoan.customer.customerUniqueId}}</mat-cell>
                 </ng-container>
+                <ng-container matColumnDef="customerName">
+                    <mat-header-cell *matHeaderCellDef>Customer Name</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{item.masterLoan.customer.firstName| titlecase}}
+                        &nbsp;{{item.masterLoan.customer.lastName| titlecase}}</mat-cell>
+                </ng-container>
 
                 <ng-container matColumnDef="loanId">
                     <mat-header-cell *matHeaderCellDef>Loan ID</mat-header-cell>
