--- a/gold-admin-frontend/src/app/views/partials/components/update-location/update-location.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/update-location/update-location.component.html
@@ -193,7 +193,7 @@
                             </div>
                         </div>
                         <!-- Deliver To ends -->
-                        <div *ngIf="!(data.isOut || (data.stage == 11 && controls.packetLocationId.value == 2))"
+                        <!-- <div *ngIf="!(data.isOut || (data.stage == 11 && controls.packetLocationId.value == 2))"
                             class="row justify-content-center kt-margin-t-15">
                             <div class="col-4 form-label">
                                 <label class="kt-padding-l-10 mandatory">User Type</label>
@@ -212,7 +212,7 @@
                                 </mat-error>
 
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="row justify-content-center kt-margin-t-15">
