--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -109,7 +109,7 @@
 
               <div class="col">
                 <label>By KYC Status</label>
-                <kt-multi-select-search formControlName="kycStatus" [items]="approvalStatus.bm" [multiple]="true"
+                <kt-multi-select-search formControlName="kycStatus" [items]="approvalStatus.apprsiserOrCCE" [multiple]="true"
                   [bindLabel]="'name'" [isClear]="clearData" [placeholder]="'KYC Status'"></kt-multi-select-search>
               </div>
               <div class="col-2 d-flex align-items-end">
